--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Hola mundo</h1>
+<div>
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    Contenido de la página (Se renderiza el componente deseado utlizando router-outlet)
+    <app-footer></app-footer>
+</div>
