Estructura básica del front(2)

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div>
     <app-header></app-header>
-    <router-outlet></router-outlet>
-    Contenido de la página (Se renderiza el componente deseado utlizando router-outlet)
+    <app-content></app-content>
     <app-footer></app-footer>
 </div>
