modificando header home y footer

--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -1,1 +1,8 @@
-<h2 style="background-color: darkkhaki;">Footer</h2>
+<footer>
+    <p>&copy; 2025 Incubadora del noc. Todos los derechos reservados.</p>
+    <ul>
+      <li><a >Instagram</a></li>
+      <li><a routerLink="/contacto">Contacto</a></li>
+    </ul>
+  </footer>
+  
