--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -1,1 +1,31 @@
-<h1 style="background-color: beige;">Header</h1>
+<header>
+    <div class="logo">
+      <a routerLink="/">Incubadora del NOC</a>
+    </div>
+  
+    <nav class="nav-bar">
+      
+      <div class="dropdown">
+        <button class="dropdown-btn">Cursos ▼</button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Curso Aleatorio </a></li>
+          <li><a href="#">Curso Aleatorio </a></li>
+          <li><a href="#">Curso Aleatorio </a></li>
+          <li><a href="#">Curso Aleatorio </a></li>
+          <li><a href="#">Curso Aleatorio </a></li>
+          <li><a href="#">Curso Aleatorio </a></li>
+          <li><a href="#">Curso Aleatorio </a></li>
+        </ul>
+      </div>
+  
+      
+      <input type="text" placeholder="Buscar cursos..." class="search-bar" />
+  
+     
+      <div class="auth-buttons">
+        <button class="btn login-btn" routerLink="/login">Iniciar Sesión</button>
+        <button class="btn register-btn" routerLink="/registro">Registrarse</button>
+      </div>
+    </nav>
+  </header>
+  
