--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div>
     <app-header></app-header>
-    <app-content></app-content>
+    <main>
+      <app-content></app-content>
+    </main>
     <app-footer></app-footer>
-</div>
+  </div>
+  
