--- a/front/src/app/views/register/register.component.html
+++ b/front/src/app/views/register/register.component.html
@@ -1,1 +1,78 @@
-<p>register works!</p>
+<div class="container">
+    <div class="content">
+      <iframe
+        width="1250"
+        height="703"
+        src="https://www.youtube.com/embed/0YRX4pEP6pY"
+        title="CARDIO 30 MINUTOS PARA ELIMINAR GRASA ABDOMINAL"
+        class="video"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+  
+      <div class="form-container">
+        <h3 class="title">Create an Account</h3>
+        <form (ngSubmit)="onSubmit()">
+          <div class="input-group">
+            <label for="name">Full Name</label>
+            <input
+              type="text"
+              id="name"
+              [(ngModel)]="name"
+              name="name"
+              placeholder="Enter your full name"
+              required
+            />
+          </div>
+          <div class="input-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              [(ngModel)]="email"
+              name="email"
+              placeholder="Enter your email"
+              required
+            />
+          </div>
+          <div class="input-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              [(ngModel)]="password"
+              name="password"
+              placeholder="******************"
+              required
+            />
+          </div>
+          <div class="input-group">
+            <label for="confirmPassword">Confirm Password</label>
+            <input
+              type="password"
+              id="confirmPassword"
+              [(ngModel)]="confirmPassword"
+              name="confirmPassword"
+              placeholder="******************"
+              required
+            />
+            <p class="warning" *ngIf="errorMessage">{{ errorMessage }}</p>
+          </div>
+          <div class="checkbox-group">
+            <input type="checkbox" id="terms" [(ngModel)]="termsAccepted" name="termsAccepted" />
+            <label for="terms">I accept the terms and conditions</label>
+          </div>
+          <div class="button-group">
+            <button type="submit" class="btn" [disabled]="!name || !email || !password || !confirmPassword || !termsAccepted">
+              Register
+            </button>
+          </div>
+          <hr />
+          <div class="links">
+            <a routerLink="/login">Already have an account? Login!</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  
