--- a/front/src/app/core/header/header.component.html
+++ b/front/src/app/core/header/header.component.html
@@ -24,7 +24,7 @@
      
       <div class="auth-buttons">
         <button class="btn login-btn" routerLink="/login">Iniciar Sesión</button>
-        <button class="btn register-btn" routerLink="/register">Registrarse</button>
+        <button class="btn register-btn" routerLink="/registro">Registrarse</button>
       </div>
     </nav>
   </header>
