--- a/front/src/app/core/header/header.component.html
+++ b/front/src/app/core/header/header.component.html
@@ -23,8 +23,8 @@
   
      
       <div class="auth-buttons">
-        <button class="btn login-btn" routerLink="/login">Iniciar Sesión</button>
-        <button class="btn register-btn" routerLink="/registro">Registrarse</button>
+        <a class="btn login-btn" href="/login">Iniciar Sesión</a>
+        <a class="btn register-btn" href="/register">Registrarse</a>
       </div>
     </nav>
   </header>
