--- a/front/src/app/views/login/login.component.html
+++ b/front/src/app/views/login/login.component.html
@@ -11,7 +11,7 @@
       ></iframe>
   
       <div class="form-container">
-        <h3 class="title">Welcome Back!</h3>
+        <h3 class="title">¡Bienvenido de nuevo!</h3>
         <form (ngSubmit)="onSubmit()">
           <div class="input-group">
             <label for="email">Email</label>
@@ -25,7 +25,7 @@
             />
           </div>
           <div class="input-group">
-            <label for="password">Password</label>
+            <label for="password">Contraseña</label>
             <input
               type="password"
               id="password"
@@ -38,15 +38,15 @@
           </div>
           <div class="checkbox-group">
             <input type="checkbox" id="remember" [(ngModel)]="rememberMe" name="rememberMe" />
-            <label for="remember">Remember Me</label>
+            <label for="remember">Recordar</label>
           </div>
           <div class="button-group">
-            <button type="submit" class="btn" [disabled]="!email || !password">Sign In</button>
+            <button type="submit" class="btn" [disabled]="!email || !password">Iniciar sesión</button>
           </div>
           <hr />
           <div class="links">
-            <a routerLink="/register">Create an Account!</a>
-            <a href="#">Forgot Password?</a>
+            <a href="/register">¡Crea una cuenta!</a>
+            <a href="#">¿Has olvidado tu contraseña?</a>
           </div>
         </form>
       </div>
