--- a/front/src/app/views/register/register.component.html
+++ b/front/src/app/views/register/register.component.html
@@ -11,16 +11,16 @@
       ></iframe>
   
       <div class="form-container">
-        <h3 class="title">Create an Account</h3>
+        <h3 class="title">Crear una cuenta</h3>
         <form (ngSubmit)="onSubmit()">
           <div class="input-group">
-            <label for="name">Full Name</label>
+            <label for="name">Nombre completo</label>
             <input
               type="text"
               id="name"
               [(ngModel)]="name"
               name="name"
-              placeholder="Enter your full name"
+              placeholder="Introduce tu nombre completo"
               required
             />
           </div>
@@ -31,12 +31,12 @@
               id="email"
               [(ngModel)]="email"
               name="email"
-              placeholder="Enter your email"
+              placeholder="Introduce tu email completo"
               required
             />
           </div>
           <div class="input-group">
-            <label for="password">Password</label>
+            <label for="password">Contraseña</label>
             <input
               type="password"
               id="password"
@@ -47,7 +47,7 @@
             />
           </div>
           <div class="input-group">
-            <label for="confirmPassword">Confirm Password</label>
+            <label for="confirmPassword">Confirme su Contraseña</label>
             <input
               type="password"
               id="confirmPassword"
@@ -60,16 +60,16 @@
           </div>
           <div class="checkbox-group">
             <input type="checkbox" id="terms" [(ngModel)]="termsAccepted" name="termsAccepted" />
-            <label for="terms">I accept the terms and conditions</label>
+            <label for="terms">Acepto los términos y condiciones</label>
           </div>
           <div class="button-group">
             <button type="submit" class="btn" [disabled]="!name || !email || !password || !confirmPassword || !termsAccepted">
-              Register
+              Registrar
             </button>
           </div>
           <hr />
           <div class="links">
-            <a routerLink="/login">Already have an account? Login!</a>
+            <a href="/login">¿Ya tienes una cuenta? ¡Acceso!</a>
           </div>
         </form>
       </div>
