--- a/front/src/app/core/header/header.component.html
+++ b/front/src/app/core/header/header.component.html
@@ -4,7 +4,12 @@
     </div>
   
     <nav class="nav-bar">
-      
+
+      <label class="switch">
+        <input type="checkbox" (click)="toggleDarkMode()" id="modo-desktop">
+        <span class="slider"></span>
+      </label>
+    
       <div class="dropdown">
         <button class="dropdown-btn">Cursos ▼</button>
         <ul class="dropdown-menu">
