--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+   /* height: 100%;*/
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -8,7 +8,7 @@ html, body {
   app-root {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; 
+    /*min-height: 100vh; */
   }
   
   main {
