--- a/front/src/app/core/footer/footer.component.css
+++ b/front/src/app/core/footer/footer.component.css
@@ -5,7 +5,7 @@ footer {
     text-align: center;
     padding: 20px;
     font-size: 14px;
-    position: absolute;
+   /* position: absolute;*/
     bottom: 0;
     width: 100%;
   }
