--- a/front/src/app/views/home/home.component.html
+++ b/front/src/app/views/home/home.component.html
@@ -15,7 +15,7 @@
 
     <div class="caract-cont">
       <h2>¿Qué ofrecemos?</h2>
-      <p>Ademas de acompañarte para que tu negocio alcance el éxito, ofrecemos cursos, seminarios y talleres; prácticos, teóricos y presenciales.</p>
+      <p>Además de acompañarte para que tu negocio alcance el éxito, ofrecemos cursos, seminarios y talleres; prácticos, teóricos y presenciales.</p>
     </div>
   
   </section>  
