cambio de paleta de colores login y registro y el dark mode

--- a/front/src/app/core/header/header.component.css
+++ b/front/src/app/core/header/header.component.css
@@ -45,12 +45,12 @@ a {
 
 /* Estilo para el slider cuando el input está marcado */
 input:checked + .slider {
-  background-color: #9e23ff; /* Cambiar color de fondo del slider */
+  background-color: var(--color-naranja); /* Cambiar color de fondo del slider */
 }
 
 /* Estilo para el slider cuando el input está enfocado */
 input:focus + .slider {
-  box-shadow: 0 0 10px #4E4061; /* Agregar sombra alrededor del slider */
+  box-shadow: 0 0 10px var(--color-naranja); /* Agregar sombra alrededor del slider */
 }
 
 /* Estilo para el círculo dentro del slider cuando el input está marcado */
