--- a/front/src/app/views/login/login.component.html
+++ b/front/src/app/views/login/login.component.html
@@ -1,55 +1,58 @@
 <div class="container">
-    <div class="content">
-      <iframe
-        width="1250"
-        height="703"
-        src="https://www.youtube.com/embed/0YRX4pEP6pY"
-        title="CARDIO 30 MINUTOS PARA ELIMINAR GRASA ABDOMINAL"
-        class="video"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
-  
-      <div class="form-container">
-        <h3 class="title">¡Bienvenido de nuevo!</h3>
-        <form (ngSubmit)="onSubmit()">
-          <div class="input-group">
-            <label for="email">Email</label>
-            <input
-              type="text"
-              id="email"
-              [(ngModel)]="email"
-              name="email"
-              placeholder="Ingrese aquí su Email"
-              required
-            />
-          </div>
-          <div class="input-group">
-            <label for="password">Contraseña</label>
-            <input
-              type="password"
-              id="password"
-              [(ngModel)]="password"
-              name="password"
-              placeholder="******************"
-              required
-            />
-            <p class="warning" *ngIf="errorMessage">{{ errorMessage }}</p>
-          </div>
-          <div class="checkbox-group">
-            <input type="checkbox" id="remember" [(ngModel)]="rememberMe" name="rememberMe" />
-            <label for="remember">Recordar</label>
-          </div>
-          <div class="button-group">
-            <button type="submit" class="btn" [disabled]="!email || !password">Iniciar sesión</button>
-          </div>
-          <hr />
-          <div class="links">
-            <a href="/register">¡Crea una cuenta!</a>
-            <a href="#">¿Has olvidado tu contraseña?</a>
-          </div>
-        </form>
-      </div>
+  <div class="content">
+    <iframe
+      width="1250"
+      height="703"
+      src="https://www.youtube.com/embed/0YRX4pEP6pY"
+      title="CARDIO 30 MINUTOS PARA ELIMINAR GRASA ABDOMINAL"
+      class="video"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
+
+    <div class="form-container">
+      <h3 class="title">¡Bienvenido de nuevo!</h3>
+      <form [formGroup]="loginForm" (ngSubmit)="manejarEnvio()">
+        <div class="input-group">
+          <label for="email">Email</label>
+          <input
+            type="text"
+            id="email"
+            formControlName="email"
+            placeholder="Ingrese aquí su email"
+          />
+          <p class="warning" *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
+            El email es obligatorio
+          </p>
+        </div>
+
+        <div class="input-group">
+          <label for="password">Contraseña</label>
+          <input
+            type="password"
+            id="password"
+            formControlName="password"
+            placeholder="******************"
+          />
+          <p class="warning" *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
+            La contraseña es obligatoria
+          </p>
+        </div>
+
+        <div class="checkbox-group">
+          <input type="checkbox" id="remember" formControlName="rememberMe" />
+          <label for="remember">Recordar</label>
+        </div>
+
+        <div class="button-group">
+          <button type="submit" class="btn" [disabled]="loginForm.invalid">Iniciar sesión</button>
+        </div>
+        <hr />
+        <div class="links">
+          <a href="/register">¡Crea una cuenta!</a>
+          <a href="#">¿Has olvidado tu contraseña?</a>
+        </div>
+      </form>
     </div>
   </div>
-  
+</div>
