--- a/front/src/app/views/home/home.component.html
+++ b/front/src/app/views/home/home.component.html
@@ -26,6 +26,14 @@
     <button class="cta">Explorar Cursos</button>
   </section>
 
+
+<!-- PUBLICACIONES -->
+  <section>
+    <h1>Portal de noticias</h1>
+    <app-publications></app-publications>
+  </section>
+
+
   <!-- Cursos Destacados -->
   <section class="cursos-destacados">
     <h2>Cursos Destacados</h2>
