--- a/front/src/app/views/home/home.component.html
+++ b/front/src/app/views/home/home.component.html
@@ -19,13 +19,40 @@
     </div>
   
   </section>  
+    
+  <section>
+    <div class="carousel-container">
+      <!-- Lista de imágenes definidas directamente en HTML -->
+      <div class="carousel-slide" *ngFor="let img of ['assets/IMG_6426.jpg', 'assets/IMG_6427.jpg', 'assets/IMG_6425.jpg']; let i = index"
+           [ngClass]="{'active': i === currentIndex}">
+        <img [src]="img" alt="Imagen {{ i + 1 }}">
+        
+      </div>
+    
+      <!-- Botones de navegación -->
+      <button class="prev" (click)="prevSlide()">&#10094;</button>
+      <button class="next" (click)="nextSlide()">&#10095;</button>
+    
+      <!-- Indicadores (dots) -->
+      <div class="carousel-dots">
+        <span *ngFor="let img of ['assets/IMG_6426.jpg', 'assets/IMG_6427.jpg', 'assets/IMG_6425.jpg']; let i = index"
+              class="dot" 
+              [ngClass]="{'active': i === currentIndex}"
+              (click)="goToSlide(i)">
+        </span>
+      </div>
+    </div>
+  </section>  
 
+  
   <section class="courses">
     <h1>Aprende con los mejores cursos online</h1>
     <p>Descubre nuestra oferta de formación y mejora tus habilidades.</p>
     <button class="cta">Explorar Cursos</button>
   </section>
 
+
+ 
   <!-- Cursos Destacados -->
   <section class="cursos-destacados">
     <h2>Cursos Destacados</h2>
@@ -44,4 +71,7 @@
       <li>✅ Certificación al finalizar</li>
       <li>✅ Clases en vivo y grabadas</li>
     </ul>
+    
   </section>
+
+
