--- a/front/src/app/views/home/home.component.html
+++ b/front/src/app/views/home/home.component.html
@@ -53,7 +53,7 @@
 
 
 <!-- PUBLICACIONES -->
-  <section>
+  <section class="notices">
     <h1>Portal de noticias</h1>
     <app-publications></app-publications>
   </section>
