--- a/front/src/app/views/home/home.component.css
+++ b/front/src/app/views/home/home.component.css
@@ -181,56 +181,68 @@ Incluye diseño responsive
 
 .carousel-container {
   position: relative;
-  max-width: 600px;
+  max-width: auto;
+  height: 600px; 
   margin: auto;
   overflow: hidden;
+  margin-top: 10px;
 }
 
 .carousel-slide {
   display: none;
   width: 100%;
+  height: 100%;
 }
 
 .carousel-slide img {
   width: 100%;
-  border-radius: 10px;
+  height: 100%;
+  object-fit:fill; 
+
 }
 
 .active {
   display: block;
 }
 
-button {
+.prev,
+.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   background: rgba(0, 0, 0, 0.5);
   color: white;
   border: none;
   cursor: pointer;
   padding: 10px;
-  margin-top: 10px;
   font-size: 18px;
+  z-index: 10;
 }
 
 .prev { left: 10px; }
 .next { right: 10px; }
 
 .carousel-dots {
-  text-align: center;
-  margin-top: 10px;
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 10px;
 }
 
-.notices{
-  padding: 20px;
-}
 .dot {
   height: 10px;
   width: 10px;
-  margin: 0 5px;
   background-color: gray;
   border-radius: 50%;
-  display: inline-block;
   cursor: pointer;
 }
 
 .dot.active {
   background-color: white;
+}
+
+.notices{
+  padding: 20px;
 }
