register funcional and responsive home

--- a/front/src/app/core/publications/publications.component.css
+++ b/front/src/app/core/publications/publications.component.css
@@ -58,4 +58,9 @@ h4 {
 .date{
   text-align: end;
 }
-/* DARK MODE*/
+/* RESPONSIVE*/
+@media (max-width: 600px) {
+  .card{
+    width: 15rem;
+  }
+}
