--- a/front/src/app/views/home/home.component.css
+++ b/front/src/app/views/home/home.component.css
@@ -1,4 +1,3 @@
-
 /*
 colores
 violeta: #6564CC
@@ -67,19 +66,42 @@ body {
 }
 
 .caract-cont {
+  max-width: 100%; /* Evita que el contenido se extienda más allá de su contenedor */
+  overflow-wrap: break-word; /* Permite que las palabras largas se dividan */
+  word-wrap: break-word; /* Alternativa para compatibilidad */
+  white-space: normal; /* Asegura que el texto haga saltos de línea */
   height: 120px;
-  width: 100%;
+  overflow: hidden;
   margin: 16px;
   padding: 16px;
   border: 1px solid #fc6a0750;
   border-radius: 5px;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
 }
 
 .caract-cont h2 {
   padding: 0 0 8px 0;
 }
 
+@media (max-width: 600px) {
+  .presentation-tit h1 {
+    font-size: 1.4rem;
+  }
+  .caract-cont {
+    height: 200px;
+  }
+  .courses .cta{
+    font-size: 12px;
+  }
+  /* Cursos Destacados */
+.cursos-grid {
+  padding: 50px 20px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+}
 @media (min-width: 768px) {
   .presentation {
     flex-direction: row;
@@ -103,10 +125,10 @@ body {
   .presentation-tit h1 {
     font-size: 2.5rem;
   }
-  .caract-cont:hover{
+  .caract-cont:hover {
     transform: scale(1.02);
   }
-  
+
   .caract {
     flex-direction: row;
   }
@@ -124,6 +146,10 @@ Incluye diseño responsive
   color: rgb(0, 0, 0);
   padding: 80px 20px;
   height: 200px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero h1 {
@@ -138,11 +164,16 @@ Incluye diseño responsive
   cursor: pointer;
   font-size: 18px;
   border-radius: 5px;
+  margin-top: 10px;
 }
 
 /* Cursos Destacados */
 .cursos-destacados {
   padding: 50px 20px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .cursos-grid {
@@ -165,6 +196,10 @@ Incluye diseño responsive
 .beneficios {
   background: #dfe6e9;
   padding: 30px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .beneficios ul {
@@ -176,13 +211,12 @@ Incluye diseño responsive
   font-size: 18px;
 }
 
-
 /* carrusel */
 
 .carousel-container {
   position: relative;
   max-width: auto;
-  height: 600px; 
+  height: 600px;
   margin: auto;
   overflow: hidden;
   margin-top: 10px;
@@ -197,8 +231,7 @@ Incluye diseño responsive
 .carousel-slide img {
   width: 100%;
   height: 100%;
-  object-fit:fill; 
-
+  object-fit: fill;
 }
 
 .active {
@@ -219,8 +252,12 @@ Incluye diseño responsive
   z-index: 10;
 }
 
-.prev { left: 10px; }
-.next { right: 10px; }
+.prev {
+  left: 10px;
+}
+.next {
+  right: 10px;
+}
 
 .carousel-dots {
   position: absolute;
@@ -243,6 +280,10 @@ Incluye diseño responsive
   background-color: white;
 }
 
-.notices{
+.notices {
   padding: 20px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
