--- a/front/src/app/views/register/register.component.css
+++ b/front/src/app/views/register/register.component.css
@@ -61,6 +61,15 @@ body {
     border-radius: 5px;
 }
 
+.radio-group {
+    display: flex;
+    align-items: center;
+}
+
+.radio-group input {
+    margin: 0;
+}
+
 .warning {
     font-size: 12px;
     color: red;
@@ -145,3 +154,4 @@ body {
         padding: 12px;
     }
 }
+
