--- a/front/src/app/views/register/register.component.html
+++ b/front/src/app/views/register/register.component.html
@@ -1,78 +1,74 @@
 <div class="container">
-    <div class="content">
-      <iframe
-        width="1250"
-        height="703"
-        src="https://www.youtube.com/embed/0YRX4pEP6pY"
-        title="CARDIO 30 MINUTOS PARA ELIMINAR GRASA ABDOMINAL"
-        class="video"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
-  
-      <div class="form-container">
-        <h3 class="title">Crear una cuenta</h3>
-        <form (ngSubmit)="onSubmit()">
-          <div class="input-group">
-            <label for="name">Nombre completo</label>
-            <input
-              type="text"
-              id="name"
-              [(ngModel)]="name"
-              name="name"
-              placeholder="Introduce tu nombre completo"
-              required
-            />
+  <div class="content">
+    <iframe width="1250" height="720" src="https://www.youtube.com/embed/0YRX4pEP6pY"
+      title="CARDIO 30 MINUTOS PARA ELIMINAR GRASA ABDOMINAL" class="video"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
+
+    <div class="form-container">
+      <h3 class="title">Crear una cuenta</h3>
+
+      <!-- Asegúrate de usar el FormGroup correctamente -->
+      <form [formGroup]="registerForm" (ngSubmit)="manejarEnvio()">
+        <div class="input-group">
+          <label for="name">Nombre completo</label>
+          <input type="text" id="name" formControlName="name" placeholder="Introduce tu nombre completo" required />
+        </div>
+
+        <div class="input-group">
+          <label for="lastName">Apellido completo</label>
+          <input type="text" id="lastName" formControlName="lastName" placeholder="Introduce tu apellido completo"
+            required />
+        </div>
+
+        <div class="input-group">
+          <label for="dni">DNI</label>
+          <input type="text" id="dni" formControlName="dni" placeholder="Introduce tu DNI" required />
+        </div>
+
+        <div class="input-group">
+          <label for="date_of_birth">Fecha de nacimiento</label>
+          <input type="date" id="date_of_birth" formControlName="date_of_birth" required />
+        </div>
+
+        <div class="input-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" formControlName="email" placeholder="Introduce tu email" required />
+        </div>
+
+        <div class="input-group">
+          <label for="password">Contraseña</label>
+          <input type="password" id="password" formControlName="password" placeholder="******************" required />
+        </div>
+
+        <div class="input-group">
+          <label>Role</label>
+          <div class="radio-group">
+            <input type="radio" id="docente" formControlName="role" value="Docente" required />
+            <label for="docente">Docente</label>
+        
+            <input type="radio" id="estudiante" formControlName="role" value="Estudiante" required />
+            <label for="estudiante">Estudiante</label>
           </div>
-          <div class="input-group">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              id="email"
-              [(ngModel)]="email"
-              name="email"
-              placeholder="Introduce tu email completo"
-              required
-            />
-          </div>
-          <div class="input-group">
-            <label for="password">Contraseña</label>
-            <input
-              type="password"
-              id="password"
-              [(ngModel)]="password"
-              name="password"
-              placeholder="******************"
-              required
-            />
-          </div>
-          <div class="input-group">
-            <label for="confirmPassword">Confirme su Contraseña</label>
-            <input
-              type="password"
-              id="confirmPassword"
-              [(ngModel)]="confirmPassword"
-              name="confirmPassword"
-              placeholder="******************"
-              required
-            />
-            <p class="warning" *ngIf="errorMessage">{{ errorMessage }}</p>
-          </div>
-          <div class="checkbox-group">
-            <input type="checkbox" id="terms" [(ngModel)]="termsAccepted" name="termsAccepted" />
-            <label for="terms">Acepto los términos y condiciones</label>
-          </div>
-          <div class="button-group">
-            <button type="submit" class="btn" [disabled]="!name || !email || !password || !confirmPassword || !termsAccepted">
-              Registrar
-            </button>
-          </div>
-          <hr />
-          <div class="links">
-            <a href="/login">¿Ya tienes una cuenta? ¡Acceso!</a>
-          </div>
-        </form>
-      </div>
+        </div>
+        
+        
+
+        <div class="checkbox-group">
+          <input type="checkbox" id="terms" formControlName="termsAccepted" />
+          <label for="terms">Acepto los términos y condiciones</label>
+        </div>
+
+        <div class="button-group">
+          <button type="submit" class="btn" [disabled]="registerForm.invalid">Registrar</button>
+        </div>
+
+        <hr />
+
+        <div class="links">
+          <a routerLink="/login">¿Ya tienes una cuenta? ¡Acceso!</a>
+        </div>
+      </form>
     </div>
   </div>
-  
+</div>
