--- a/front/src/app/views/courses/courses.component.html
+++ b/front/src/app/views/courses/courses.component.html
@@ -1,18 +1,27 @@
-<div class="course-card">
-    <img src="ruta-de-la-imagen.jpg" alt="Imagen del curso">
-    <div class="course-card-body">
-      <h5 class="course-card-title">Título del Curso</h5>
-      <p class="course-card-text">
-        Breve descripción del curso que destaca los puntos clave y beneficios para el estudiante.
-      </p>
-      <p class="course-card-info">
-        <i class="fas fa-calendar-alt"></i> Fecha de inicio: 10 de marzo de 2025
-      </p>
-      <p class="course-card-info">
-        <i class="fas fa-clock"></i> Duración: 8 semanas
-      </p>
-      <p class="course-card-price">$200</p>
-      <a href="enlace-al-curso" class="course-card-button">Inscribirse Ahora</a>
-    </div>
-  </div>
-  
+
+<section class="courses-intro">
+    <h2 class="courses-title">Impulsa tu Futuro con Nuestros Cursos Especializados</h2>
+    <p class="courses-description">En nuestra plataforma, ofrecemos una variedad de cursos diseñados para potenciar tus habilidades y conocimientos en diversas áreas. Ya sea que busques avanzar en tu carrera profesional o explorar nuevas pasiones, nuestros programas están estructurados para brindarte una experiencia de aprendizaje integral y efectiva.</p>
+    
+    <div class="course-card">
+        <img src="ruta-de-la-imagen.jpg" alt="Imagen del curso">
+        <div class="course-card-body">
+          <h5 class="course-card-title">Título del Curso</h5>
+          <p class="course-card-text">
+            Breve descripción del curso que destaca los puntos clave y beneficios para el estudiante.
+          </p>
+          <p class="course-card-info">
+            <i class="fas fa-calendar-alt"></i> Fecha de inicio: 10 de marzo de 2025
+          </p>
+          <p class="course-card-info">
+            <i class="fas fa-clock"></i> Duración: 8 semanas
+          </p>
+          <p class="course-card-price">$200</p>
+          <a href="enlace-al-curso" class="course-card-button">Inscribirse Ahora</a>
+        </div>
+      </div>
+      
+
+
+  </section>
+
