--- a/front/src/app/views/courses/courses.component.css
+++ b/front/src/app/views/courses/courses.component.css
@@ -1,4 +1,27 @@
-/* Estilos para la tarjeta del curso */
+.courses-intro {
+  text-align: center;
+  margin: 40px 20px;
+  padding: 20px;
+  background-color: #f9f9f9; /* Color de fondo suave */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+}
+
+/* Estilos para el título de los cursos */
+.courses-title {
+  font-size: 2.5rem;
+  color: #010163; 
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+/* Estilos para la descripción de los cursos */
+.courses-description {
+  font-size: 1.2rem;
+  color: #333; /* Gris oscuro para el texto */
+  line-height: 1.6;
+}
+
 .course-card {
     background-color: #f5f5f5; /* Color de fondo de la tarjeta */
     border: 1px solid #FC6A07; /* Borde de la tarjeta */
@@ -25,7 +48,7 @@
   
   .course-card-title {
     font-size: 1.5rem;
-    color: #00339e; /* Color del título */
+    color: #00339E; /* Color del título */
     margin-bottom: 8px;
   }
   
