--- a/front/src/app/core/header/header.component.html
+++ b/front/src/app/core/header/header.component.html
@@ -1,15 +1,7 @@
 <header>
-<<<<<<< HEAD
-    <div class="logo">
-      <a href="/">Incubadora del NOC  </a>
-    </div>
-  
-    <nav class="nav-bar">
-=======
   <div class="logo">
     <a href="/">Incubadora del NOC</a>
   </div>
->>>>>>> eb08b009b26b78c256a51f08ddac228989bd0618
 
   <nav class="nav-bar">
 
@@ -17,6 +9,8 @@
       <input type="checkbox" (click)="toggleDarkMode()" id="modo-desktop">
       <span class="slider"></span>
     </label>
+
+    <button ><a [routerLink]="['/dashboard']">Ir al Dashboard</a></button>
 
     <div class="dropdown">
       <button class="dropdown-btn">Cursos ▼</button>
