--- a/front/src/app/core/header/header.component.css
+++ b/front/src/app/core/header/header.component.css
@@ -1,3 +1,10 @@
+body,*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 a {
   text-decoration: none;
 }
@@ -74,12 +81,12 @@ header {
 }
 
 /* 🔹 Logo */
-.logo a {
-  font-size: 20px;
-  font-weight: bold;
-  color: #fff; /* Naranja */
-  text-decoration: none;
+.logo a img{
+
+  height: 2.5rem;
+  background-size: contain;
 }
+
 
 /* 🔹 Navbar */
 .nav-bar {
