--- a/front/src/app/core/side-bar/side-bar.component.html
+++ b/front/src/app/core/side-bar/side-bar.component.html
@@ -1,10 +1,10 @@
 <nav class="sidebar">
   <ul>
-    <li><a routerLink="profile">My Profile</a></li>
-    <li><a routerLink="mycourses">My Courses</a></li>
-    <li><a routerLink="attendance">My Attendance</a></li>
-    <li><a routerLink="mygrades">My Grades</a></li>
-    <li><a routerLink="myenrollments">My Enrollments</a></li>
-    <li><a routerLink="mypayments">My Payments</a></li>
+    <li><a routerLink="profile">Mi Perfil</a></li>
+    <li><a routerLink="mycourses">Mis Cursos</a></li>
+    <li><a routerLink="attendance">Mis Asistencias</a></li>
+    <li><a routerLink="mygrades">Mis Notas</a></li>
+    <li><a routerLink="myenrollments">Mis Inscripciones</a></li>
+    <li><a routerLink="mypayments">Historial de pagos</a></li>
   </ul>
 </nav>
