--- a/front/src/app/core/side-bar/side-bar.component.css
+++ b/front/src/app/core/side-bar/side-bar.component.css
@@ -1,8 +1,10 @@
-.sidebar {
+
+  .sidebar {
     width: 250px;
-    background-color: #f4f4f4;
+    background-color: #00339E;
     height: 100vh;
     padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); 
   }
   
   .sidebar ul {
@@ -11,15 +13,23 @@
   }
   
   .sidebar ul li {
-    margin-bottom: 10px;
+    margin-bottom: 30px; 
   }
   
   .sidebar ul li a {
     text-decoration: none;
-    color: #333;
+    color: #FC6A07;
     font-weight: bold;
+    background-color: #ffffff; 
+    padding: 10px 15px; 
+    border-radius: 5px; 
+    display: block; 
+    transition: background-color 0.3s, color 0.3s; 
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
   }
   
   .sidebar ul li a:hover {
-    color: #007bff;
+    background-color: #FC6A07; 
+    color: #ffffff;
   }
+  
