--- a/front/src/app/views/courses/courses.component.html
+++ b/front/src/app/views/courses/courses.component.html
@@ -1,5 +1,5 @@
-
-<section class="courses-intro">
+<main>
+  <section class="courses-intro">
     <h2 class="courses-title">Impulsa tu Futuro con Nuestros Cursos Especializados</h2>
     <p class="courses-description">En nuestra plataforma, ofrecemos una variedad de cursos diseñados para potenciar tus habilidades y conocimientos en diversas áreas. Ya sea que busques avanzar en tu carrera profesional o explorar nuevas pasiones, nuestros programas están estructurados para brindarte una experiencia de aprendizaje integral y efectiva.</p>
     
@@ -36,4 +36,6 @@
 
 
   </section>
+
+</main>
 
