--- a/front/src/app/views/courses/courses.component.css
+++ b/front/src/app/views/courses/courses.component.css
@@ -1,7 +1,6 @@
-body{
-  height: 100hv;
-}
+
 .courses-intro {
+  height: 100vh;
   text-align: center;
   margin: 40px 20px;
   padding: 20px;
@@ -95,7 +94,8 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(101, 100, 204, 0.5);
+    
     padding: 20px;
     border-radius: 8px;
     color: white;
@@ -103,17 +103,22 @@ body{
     z-index: 1000;
   }
   
+ 
   .course-detail button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: red;
+    
+    
+    background: #fc6a07;
+    border-radius: 8px;
     color: white;
     border: none;
     padding: 5px 10px;
     cursor: pointer;
   }
-  
+
+  .course-detail button:hover{
+    background: #00339E;
+  }
+
   .course-detail img {
     width: 100px;
     height: 100px;
@@ -124,3 +129,14 @@ body{
     margin: 10px 0;
   }
   
+.close-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #fc6a07;
+    border-radius: 8px;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
